first commit
-implemented error managemenet
-tested all methods
-roles corrected